--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js",
-    "knex migrate": "knex migrate:latest"
+    "dev": "nodemon  src/server.js --ignore-watch node_modules",
+    "migrate": "knex migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -20,12 +20,17 @@
   },
   "homepage": "https://github.com/HigorMatheus/Site_motos#readme",
   "dependencies": {
+    "aws-sdk": "^2.743.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "knex": "^0.21.4",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.5",
     "multer": "^1.4.2",
-    "sqlite3": "^5.0.0"
+    "multer-s3": "^2.9.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
