--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "grau_zica_api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "check-work-time",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon  src/server.js --ignore-watch node_modules",
-    "migrate": "knex migrate:latest"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HigorMatheus/Site_motos.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/HigorMatheus/Site_motos/issues"
-  },
-  "homepage": "https://github.com/HigorMatheus/Site_motos#readme",
   "dependencies": {
-    "aws-sdk": "^2.744.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "knex": "^0.21.5",
-    "multer": "^1.4.2",
-    "multer-s3": "^2.9.0",
-    "mysql": "^2.18.1"
+    "@prisma/client": "^3.10.0",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.40",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-next": "12.1.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "postcss": "^8.4.14",
+    "prettier": "^2.6.2",
+    "prisma": "^3.10.0",
+    "tailwindcss": "^3.0.24",
+    "typescript": "4.6.2"
   }
 }
