--- a/package.json
+++ b/package.json
@@ -9,29 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@faker-js/faker": "^8.0.1",
+    "@headlessui/react": "^1.7.14",
+    "@tanstack/react-query": "^4.29.11",
+    "@tanstack/react-query-devtools": "^4.29.11",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "faker": "^6.6.6",
+    "mirage": "^0.0.7",
+    "miragejs": "^0.1.47",
+    "next": "^13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "zod": "^3.21.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.17.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-next": "12.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.30.0",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "postcss": "^8.4.14",
-    "prettier": "^2.6.2",
-    "tailwindcss": "^3.0.24",
-    "typescript": "4.6.2"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.7",
+    "@typescript-eslint/eslint-plugin": ">=5.59.7",
+    "@typescript-eslint/parser": ">=5.59.7",
+    "autoprefixer": "^10.4.14",
+    "eslint": ">=8.41.0",
+    "eslint-config-next": "13.4.4",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-import": "^2.27.5",
+    "postcss": "^8.4.23",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
+    "typescript": ">=5.0.4"
   }
 }
