--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,10 @@
 {
   "extends": [
-    "next/core-web-vitals",
-    "@rocketseat/eslint-config/react"
+    "next/core-web-vitals"
   ],
   "plugins": [
-    "import"
+    "import",
+    "prettier"
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
@@ -12,7 +12,8 @@
     "prettier/prettier": [
       "error",
       {
-        "endOfLine": "auto"
+        "endOfLine": "auto",
+        "singleQuote":true
       }
     ],
     "import/no-unresolved": "error",
