--- a/package.json
+++ b/package.json
@@ -9,38 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.0.1",
-    "@headlessui/react": "^1.7.14",
-    "@tanstack/react-query": "^4.29.11",
-    "@tanstack/react-query-devtools": "^4.29.11",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "faker": "^6.6.6",
-    "mirage": "^0.0.7",
-    "miragejs": "^0.1.47",
-    "next": "^13.4.4",
+    "@formkit/auto-animate": "^0.7.0",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.17",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.45.0",
+    "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.15.2",
+    "lucide-react": "^0.269.0",
+    "next": "13.4.12",
+    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^3.39.3",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.8"
+    "react-icons": "^4.10.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwind-variants": "^0.1.13",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.1.6",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0",
-    "@tanstack/eslint-plugin-query": "^4.29.9",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@typescript-eslint/eslint-plugin": ">=5.59.7",
-    "@typescript-eslint/parser": ">=5.59.7",
-    "autoprefixer": "^10.4.14",
-    "eslint": ">=8.41.0",
-    "eslint-config-next": "13.4.4",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "postcss": "^8.4.23",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
-    "typescript": ">=5.0.4"
+    "@rocketseat/eslint-config": "^2.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1"
   }
 }
