--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formkit/auto-animate": "^0.7.0",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-table": "^8.16.0",
     "@types/node": "20.4.5",
@@ -21,7 +22,9 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.2",
@@ -30,12 +33,15 @@
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^4.10.1",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^1.14.0",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.1.6",
     "zustand": "^4.4.1"
   },
