--- a/package.json
+++ b/package.json
@@ -10,52 +10,34 @@
     "test": "jest"
   },
   "dependencies": {
-    "@formatjs/intl-localematcher": "^0.5.4",
-    "@formkit/auto-animate": "^0.7.0",
-    "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-select": "^1.2.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@tanstack/react-table": "^8.16.0",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.7.2",
-    "class-variance-authority": "^0.7.0",
+    "@prisma/client": "^6.8.2",
+    "@prisma/extension-accelerate": "^2.0.0",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@tailwindcss/postcss": "^4.1.6",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^3.6.0",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
-    "framer-motion": "^10.15.2",
-    "lucide-react": "^0.269.0",
-    "negotiator": "^0.6.3",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.3",
-    "react-icons": "^4.10.1",
-    "swiper": "^11.1.4",
-    "tailwind-merge": "^1.14.0",
-    "tailwind-variants": "^0.1.13",
-    "tailwindcss": "3.3.3",
+    "lucide-react": "^0.510.0",
+    "next": "15.3.2",
+    "postcss": "^8.5.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.3",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.6",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.6",
-    "zustand": "^4.4.1"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.1.0",
-    "@testing-library/jest-dom": "^6.4.5",
-    "@testing-library/react": "^15.0.7",
-    "@types/axios": "^0.14.0",
-    "@types/jest": "^29.5.12",
-    "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.4.1",
-    "ts-node": "^10.9.2"
+    "@biomejs/biome": "1.9.4",
+    "@types/node": "22.15.17",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5",
+    "prisma": "^6.8.2",
+    "tsx": "^4.19.4",
+    "tw-animate-css": "^1.3.0",
+    "typescript": "5.8.3"
   }
 }
