--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@prisma/client": "^6.8.2",
     "@prisma/extension-accelerate": "^2.0.0",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@tailwindcss/postcss": "^4.1.6",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
@@ -25,9 +28,12 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.6",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.27",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
